# SnoreGuard-py

./: .gitignore  README.md  SnoreGuard.spec  pyproject.toml  requirements.txt
.github/workflows/: CI.yml
docs/: MANUAL.md  TERMS_OF_USE.md
scripts/: build.bat
src/: main.py
src/core/: rule_processor.py  settings.py
src/snoreguard/: __init__.py  app.py  audio_service.py  auto_calibrator.py  calibration_modal.py  quick_splash.py  settings_manager.py  time_scheduler.py  ui.py  updater.py
src/snoreguard/vrc/: handler.py  mdns_client.py  osc_query_service.py
